--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,145 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap");
+
+:root {
+  --orange: hsl(25, 97%, 53%);
+  --white: hsl(0, 0%, 100%);
+  --light-gray: hsl(217, 12%, 63%);
+  --medium-gray: hsl(216, 12%, 54%);
+  --dark-blue: hsl(213, 19%, 18%);
+  --very-dark-blue: hsl(216, 12%, 8%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: "Overpass", sans-serif;
+  font-size: 16px;
+  background: var(--very-dark-blue);
+  margin: 0 1.25rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+/* ----- RATING CONTAINER ----  */
+
+.rating-container {
+  background: linear-gradient(120deg, var(--dark-blue), var(--very-dark-blue));
+  padding: 1.25rem;
+  border-radius: 0.625rem;
+}
+
+.star-img {
+  padding: 0.5rem;
+  background-color: #374151;
+  border-radius: 50%;
+}
+
+.submit-button {
+  background-color: var(--orange);
+  transition: all 0.15s ease-in-out;
+  padding-bottom: 0.5rem;
+  padding-top: 0.75rem;
+  color: #ffffff;
+  letter-spacing: 0.025em;
+  text-transform: uppercase;
+  width: 100%;
+  border-radius: 9999px;
+}
+
+.submit-button:hover {
+  background-color: var(--white);
+  color: var(--orange);
+}
+
+.numbers-container {
+  display: grid;
+  margin-bottom: 2.5rem;
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+  gap: 1rem;
+  list-style-type: none;
+}
+.numbers-container button {
+  padding-top: 0.25rem;
+  border: none;
+  background-color: #374151;
+  color: #e5e7eb;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+}
+
+.numbers-container button:hover {
+  background-color: var(--orange);
+}
+
+.numbers-container button:active {
+  background-color: white;
+}
+
+.header {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  color: #f3f4f6;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.rating-text {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.25rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  color: var(--light-gray);
+}
+
+/* ------ THANKS CONTAINER ------  */
+
+.thanks-img-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 1.5rem;
+}
+
+.thanks-text {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.25rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  text-align: center;
+  color: var(--light-gray);
+}
+
+.thanks-text-container {
+  text-align: center;
+}
+
+.selected-text {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.25rem;
+  background-color: #374151;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  text-align: center;
+  border-radius: 150px;
+  color: var(--orange);
+}
+
+.selected-text-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 500px) {
+  .rating-container {
+    width: 400px;
+  }
 }
